--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
 /node_modules
-# production
 /dist
-# misc
 .DS_Store
 npm-debug.log*
-.idea
+/.idea
+/.idea/*
+/.idea/workspace.xml
